--- a/css/sports-vision-fe0d13.webflow.css
+++ b/css/sports-vision-fe0d13.webflow.css
@@ -4105,7 +4105,7 @@ blockquote {
 }
 
 .about-us-photo-wrapper.cell-3 {
-  background-image: url('../images/Untitled-133-1-1024x819.png');
+  background-image: url('../images/1600-584.jpg');
   background-position: 22%;
   background-size: cover;
   flex: 1;
@@ -4512,7 +4512,7 @@ blockquote {
 }
 
 .banner-photo-wrapper {
-  background-image: url('../images/Untitled-133-1-1024x819.png');
+  background-image: url('../images/1600-584.jpg');
   background-position: 14%;
   background-repeat: no-repeat;
   background-size: cover;
