--- a/css/sports-vision-fe0d13.webflow.css
+++ b/css/sports-vision-fe0d13.webflow.css
@@ -3685,7 +3685,7 @@ blockquote {
 }
 
 .pages-banner.our-team-banner {
-  background-image: linear-gradient(#0000004d, #0000004d), url('../images/katrina-berban-rsaDNKpKotM-unsplash-2-1_1katrina-berban-rsaDNKpKotM-unsplash 2 (1).webp');
+  background-image: linear-gradient(#0000004d, #0000004d), url('../images/team-p-2000.png');
 }
 
 .pages-banner.news-banner {
