--- a/css/sports-vision-fe0d13.webflow.css
+++ b/css/sports-vision-fe0d13.webflow.css
@@ -113,7 +113,7 @@
   --background-gray: #1b1b1b;
   --red: #ff3d3d;
   --light-gray: #e3e3e3;
-  --dark-gray\<deleted\|variable-e2382e90\>: #afafaf;
+  --dark-gray\<rewritten\|variable-e2382e90\>: #afafaf;
   --trans: #fff0;
   --dark-olive-green: #212514;
   --color: #fff0;
@@ -1314,7 +1314,7 @@
 }
 
 body {
-  background-color: var(--black);
+  background-color: #000;
   color: var(--white);
   font-family: 'Riyad Bank', Inter Tight, sans-serif;
   font-size: 16px;
@@ -1374,7 +1374,6 @@ h5 {
 h6 {
   color: var(--brand);
   text-align: left;
-  letter-spacing: 3.6px;
   text-transform: uppercase;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -2300,7 +2299,7 @@ blockquote {
 }
 
 .prev-post-arrow {
-  color: var(--dark-gray\<deleted\|variable-e2382e90\>);
+  color: var(--dark-gray);
   margin-top: 0;
   margin-bottom: 0;
   margin-right: 25px;
@@ -2308,7 +2307,7 @@ blockquote {
 }
 
 .next-post-arrow {
-  color: var(--dark-gray\<deleted\|variable-e2382e90\>);
+  color: var(--dark-gray);
   margin-bottom: 0;
   margin-left: 25px;
   font-family: "Fa solid 900", sans-serif;
@@ -3324,7 +3323,7 @@ blockquote {
   border-right: 1px solid var(--black);
   border-bottom: 1px solid var(--white);
   background-color: var(--white);
-  letter-spacing: 2.4px;
+  letter-spacing: 0px;
   text-transform: uppercase;
   justify-content: center;
   align-items: center;
@@ -4184,8 +4183,16 @@ blockquote {
 }
 
 .uppercase-paragraph {
-  letter-spacing: 2.8px;
+  letter-spacing: 0px;
   text-transform: uppercase;
+  margin-top: 0;
+  font-size: 14px;
+}
+
+/* Fix for Arabic text - prevents letter spacing and uppercase issues */
+.uppercase-paragraph-rtl {
+  letter-spacing: normal;
+  text-transform: none;
   margin-top: 0;
   font-size: 14px;
 }
@@ -4495,12 +4502,20 @@ blockquote {
 }
 
 .banner-photo-wrapper {
-  background-image: url('../images/Untitled-133-1-1024x819.png');
-  background-position: 18%;
-  background-size: cover;
   width: 400px;
   height: 100%;
   position: relative;
+  overflow: hidden;
+}
+
+.banner-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
 }
 
 .brand-color-span {
@@ -5387,6 +5402,7 @@ blockquote {
   border-bottom: 1px solid var(--dark-gray);
   justify-content: center;
   width: 100%;
+  height: 900px;
   display: flex;
   position: relative;
 }
@@ -15909,8 +15925,20 @@ blockquote {
   }
 
   .banner-photo-wrapper {
-    background-position: 50% 20%;
-    height: 200px;
+    width: 400px;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .banner-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
   }
 
   .divider {
